# ece49595nl-GloVe

./: .gitignore  CMakeLists.txt  README.md  a.cpp  config.json  constants.txt
EvalProc/: distance.py  evaluate.py  word_analogy.py
cmake/: configure_file.cmake
src/: create_cooccurrences.cpp  gen_frequencies.cpp  glove.cpp  glove_types.hpp
src/include/: cooccurrence_const.hpp.in  filenames.hpp.in  freq_const.hpp.in  glove_const.hpp.in  glove_types.hpp  training_sizes.hpp.in  x_size.hpp.in
